--- a/sample/src/main/res/values/colors.xml
+++ b/sample/src/main/res/values/colors.xml
@@ -4,12 +4,12 @@
     Palette from
     https://material.io/tools/color/#!/?view.left=0&view.right=0&primary.color=01579B&secondary.color=00E676
     -->
-    <color name="chucker_primary_color">#01579b</color>
-    <color name="chucker_primary_light_color">#4f83cc</color>
-    <color name="chucker_primary_dark_color">#002f6c</color>
-    <color name="chucker_secondary_color">#00e676</color>
-    <color name="chucker_secondary_light_color">#66ffa6</color>
-    <color name="chucker_secondary_dark_color">#00b248</color>
-    <color name="chucker_primary_text_color">#ffffff</color>
-    <color name="chucker_secondary_text_color">#000000</color>
+    <color name="primary_color">#01579b</color>
+    <color name="primary_light_color">#4f83cc</color>
+    <color name="primary_dark_color">#002f6c</color>
+    <color name="secondary_color">#00e676</color>
+    <color name="secondary_light_color">#66ffa6</color>
+    <color name="secondary_dark_color">#00b248</color>
+    <color name="primary_text_color">#ffffff</color>
+    <color name="secondary_text_color">#000000</color>
 </resources>
