--- a/sample/src/main/res/values/colors.xml
+++ b/sample/src/main/res/values/colors.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!--
     Palette from
     https://material.io/tools/color/#!/?view.left=0&view.right=0&primary.color=01579B&secondary.color=00E676
     -->
     <color name="primary_color">#01579b</color>
-    <color name="primary_light_color">#4f83cc</color>
+    <color name="primary_light_color" tools:ignore="UnusedResources">#4f83cc</color>
     <color name="primary_dark_color">#002f6c</color>
     <color name="secondary_color">#00e676</color>
-    <color name="secondary_light_color">#66ffa6</color>
-    <color name="secondary_dark_color">#00b248</color>
-    <color name="primary_text_color">#ffffff</color>
-    <color name="secondary_text_color">#000000</color>
+    <color name="secondary_light_color" tools:ignore="UnusedResources">#66ffa6</color>
+    <color name="secondary_dark_color" tools:ignore="UnusedResources">#00b248</color>
+    <color name="primary_text_color" tools:ignore="UnusedResources">#ffffff</color>
+    <color name="secondary_text_color" tools:ignore="UnusedResources">#000000</color>
 </resources>
