Add graphql button in sample app

--- a/sample/src/main/res/layout-land/activity_main_sample.xml
+++ b/sample/src/main/res/layout-land/activity_main_sample.xml
@@ -88,10 +88,21 @@
         android:layout_marginHorizontal="@dimen/doub_grid_size"
         android:layout_marginBottom="@dimen/doub_grid_size"
         android:text="@string/do_http_activity"
-        app:layout_constraintBottom_toTopOf="@+id/launch_chucker_directly"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/interceptor_type_group"
+        app:layout_constraintWidth_max="@dimen/max_width" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/do_graphql"
+        android:layout_width="0dp"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_marginHorizontal="@dimen/doub_grid_size"
+        android:layout_marginBottom="@dimen/doub_grid_size"
+        android:text="@string/do_graphql_activity"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/do_http"
         app:layout_constraintWidth_max="@dimen/max_width" />
 
     <com.google.android.material.button.MaterialButton
@@ -103,7 +114,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/do_http"
+        app:layout_constraintTop_toBottomOf="@+id/do_graphql"
         app:layout_constraintWidth_max="@dimen/max_width" />
 
     <androidx.constraintlayout.widget.Guideline
