--- a/sample/src/debug/res/xml/network_security_config.xml
+++ b/sample/src/debug/res/xml/network_security_config.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<network-security-config>
-    <base-config>
+<network-security-config xmlns:tools="http://schemas.android.com/tools">
+    <base-config cleartextTrafficPermitted="true"
+        tools:ignore="InsecureBaseConfiguration">
         <trust-anchors>
             <certificates src="system"/>
             <certificates src="user"/>
