Add extra button to launch compose chucker directly

--- a/sample/src/main/res/layout/activity_main_sample.xml
+++ b/sample/src/main/res/layout/activity_main_sample.xml
@@ -85,17 +85,31 @@
         app:layout_constraintTop_toBottomOf="@+id/do_http"
         app:layout_constraintWidth_max="@dimen/max_width" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/launch_chucker_directly"
+    <LinearLayout
+        android:id="@+id/ll_launch_chucker_directly"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/doub_grid_size"
-        android:text="@string/launch_chucker_directly"
-        app:layout_constraintBottom_toTopOf="@id/export_to_file"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/export_to_file"
         app:layout_constraintTop_toBottomOf="@+id/do_graphql"
-        app:layout_constraintWidth_max="@dimen/max_width" />
+        >
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/launch_chucker_directly"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/launch_chucker_directly"
+            app:layout_constraintWidth_max="@dimen/max_width" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/launch_chucker_compose_directly"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/launch_chucker_compose_directly"
+            app:layout_constraintWidth_max="@dimen/max_width" />
+    </LinearLayout>
+
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/export_to_file"
@@ -107,7 +121,7 @@
         app:layout_constraintEnd_toStartOf="@+id/export_to_file_har"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/launch_chucker_directly"
+        app:layout_constraintTop_toBottomOf="@+id/ll_launch_chucker_directly"
         app:layout_constraintWidth_max="@dimen/max_width" />
 
     <com.google.android.material.button.MaterialButton
