Refactor: Apply insets and update app theme
This commit refactors the application to handle window insets correctly, ensuring that the UI does not overlap with system bars. It also updates the application theme to remove the action bar.

-   `styles.xml`: Changed the parent theme of `AppTheme` to `Theme.MaterialComponents.DayNight.NoActionBar` to remove the default action bar.
-   `MainActivity.kt` (library): Added `applyInsets()` to handle system window insets, ensuring content is displayed properly around system bars. Added call to `applyInsets()` in `onCreate`
-   `TransactionActivity.kt`: Added `applyInsets()` to handle system window insets, ensuring content is displayed properly around system bars. Added call to `applyInsets()` in `onCreate`
-   `activity_main_sample.xml`: Added `AppBarLayout` and `MaterialToolbar` for a custom toolbar implementation.
-   `chucker_activity_transaction.xml`: Added id to `appBarLayout`
-   `MainActivity.kt` (sample): Added `applyInsets()` to handle system window insets, ensuring content is displayed properly around system bars. Added call to `applyInsets()` in `onCreate`
-   Added toolbar subtitle for sample and library `MainActivity`

--- a/sample/src/main/res/layout/activity_main_sample.xml
+++ b/sample/src/main/res/layout/activity_main_sample.xml
@@ -4,8 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/doub_grid_size"
     tools:context="com.chuckerteam.chucker.sample.MainActivity">
+
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
+        android:fitsSystemWindows="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingBottom="4dp"
+            app:subtitleTextAppearance="?attr/textAppearanceSubtitle2"
+            app:popupTheme="@style/Chucker.Theme" />
+
+    </com.google.android.material.appbar.AppBarLayout>
 
     <TextView
         android:id="@+id/description"
