Refactor: Adjust `AppBarLayout` and UI elements in main layouts
This commit refactors the main layout files in both the library and sample modules by:

-   Removing `app:popupTheme` from `AppBarLayout` in `chucker_activity_main.xml`.
-   Moving `app:popupTheme` to `Toolbar` inside the sample's `activity_main_sample.xml`.
-   Adding missing margins to improve the UI layout consistency of `activity_main_sample.xml`.
-   Reordering views in the `activity_main_sample.xml`.
-   Adding layout horizontal margins to UI components in the `activity_main_sample.xml` such as: `description`, `interceptor_type_label`, `interceptor_type_group`, `do_http`, `do_graphql`, `launch_chucker_directly`, `export_to_file`, and `export_to_file_har`.
-   Adding a bottom margin to the `description` view in `activity_main_sample.xml`.

--- a/sample/src/main/res/layout/activity_main_sample.xml
+++ b/sample/src/main/res/layout/activity_main_sample.xml
@@ -10,8 +10,8 @@
         android:id="@+id/appBarLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
         android:fitsSystemWindows="true"
+        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -21,8 +21,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingBottom="4dp"
-            app:subtitleTextAppearance="?attr/textAppearanceSubtitle2"
-            app:popupTheme="@style/Chucker.Theme" />
+            app:popupTheme="@style/Chucker.Theme"
+            app:subtitleTextAppearance="?attr/textAppearanceSubtitle2" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -30,9 +30,10 @@
         android:id="@+id/description"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginBottom="@dimen/norm_grid_size"
         android:gravity="center"
         android:text="@string/intro_body"
-        android:layout_marginBottom="@dimen/norm_grid_size"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
         app:layout_constraintBottom_toTopOf="@+id/interceptor_type_label"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,12 +46,13 @@
         android:id="@+id/interceptor_type_label"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
         android:text="@string/interceptor_type"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
+        app:layout_constraintBottom_toTopOf="@+id/interceptor_type_group"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/description"
-        app:layout_constraintBottom_toTopOf="@+id/interceptor_type_group"
         app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintWidth_max="@dimen/max_width" />
 
@@ -58,6 +60,7 @@
         android:id="@+id/interceptor_type_group"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
         android:layout_marginVertical="@dimen/norm_grid_size"
         android:checkedButton="@+id/use_application_interceptor"
         android:orientation="horizontal"
@@ -87,6 +90,7 @@
         android:id="@+id/do_http"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
         android:layout_marginBottom="@dimen/doub_grid_size"
         android:text="@string/do_http_activity"
         app:layout_constraintEnd_toEndOf="parent"
@@ -98,6 +102,7 @@
         android:id="@+id/do_graphql"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
         android:text="@string/do_graphql_activity"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -108,6 +113,7 @@
         android:id="@+id/launch_chucker_directly"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
         android:layout_marginBottom="@dimen/doub_grid_size"
         android:text="@string/launch_chucker_directly"
         app:layout_constraintBottom_toTopOf="@id/export_to_file"
@@ -120,6 +126,7 @@
         android:id="@+id/export_to_file"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginEnd="@dimen/doub_grid_size"
         android:text="@string/export_to_file"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -133,6 +140,7 @@
         android:id="@+id/export_to_file_har"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
         android:text="@string/export_to_file_har"
         app:layout_constraintBottom_toBottomOf="@+id/export_to_file"
         app:layout_constraintEnd_toEndOf="parent"
